feat(trace): native-trace (DynamoRIO) wrappers for all language bindings
Bring every binding to parity with the Python asmtest.drtrace wrapper:
C++, Rust, Go, Node, Java, .NET, Ruby, Lua, and Zig each gain a `drtrace`
wrapper exposing the same NativeTrace/NativeCode surface — process-wide
lifecycle (available/initialize/shutdown/marker_error), per-trace recorders
(register, a scoped region, covered, block/instruction totals), and
host-native code alloc + call.

Each wrapper dlopen-loads libasmtest_drapp at run time (ASMTEST_DRAPP_LIB,
else build/) and self-skips when DynamoRIO is absent, so the core binding
never link-depends on DynamoRIO — matching how the bindings already gate
their other optional pieces.

Build / test / CI wiring:
- drtrace-<lang>-test targets + a drtrace-bindings-test aggregate
- Dockerfile.drtrace-lang + docker-drtrace-<lang>/-bindings: layer DynamoRIO
  onto each per-language image and run the wrapper against a real in-process
  DynamoRIO
- DRAPP_KEYSTONE=0 builds the standalone drapp lib Keystone-less for these
  lanes: assemble.o's emu_*_call_asm bridges reference emulator symbols that
  drapp doesn't link, so a Keystone-enabled drapp .so won't dlopen; the
  wrappers only use the raw-bytes path, so Keystone is unneeded
- drtrace_run downgrades DynamoRIO's "can't take over a JIT/GC runtime's
  threads" abort to a clean SKIP

Verified in Docker against a real in-process DynamoRIO: C++, Ruby, Java, Lua,
Zig, Rust, and Go trace live and assert coverage; Node and .NET self-skip
(the documented managed-runtime limitation — Intel PT is the backend there).

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>